// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default reporter resultEnd 1 API test, 1 location, 1 result: success 1`] = `
"[1m[32m✓[39m[22m [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[32mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m
  ⎋ Total duration: 123 ms - View test run details: [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=1&from_ci=true[39m[22m 
  [1m[32m✓[39m[22m [1m[32m[1mGET[22m[1m - http://fake.url[39m[22m

"
`;

exports[`Default reporter resultEnd 1 API test, 1 location, 3 results: success, failed non-blocking, failed blocking 1`] = `
"[1m[32m✓[39m[22m [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[32mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m
  ⎋ Total duration: 123 ms - View test run details: [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=1&from_ci=true[39m[22m 
  [1m[32m✓[39m[22m [1m[32m[1mGET[22m[1m - http://fake.url[39m[22m

[1m[33m✖[39m[22m [[1m[33mnon-blocking[39m[22m] [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[33mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m
  ⎋ Total duration: 123 ms - View test run details: [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=2&from_ci=true[39m[22m 
  [1m[33m✖[39m[22m [1m[33m[1mGET[22m[1m - http://fake.url[39m[22m
[1m[33m  - Assertion failed:[39m[22m
[1m[33m    ▶ responseTime should be less than [4m1000[24m. Actual: [4m1234[24m[39m[22m

[1m[31m✖[39m[22m [[1m[31mblocking[39m[22m] [[1m[2maaa-aaa-aaa[22m[22m] [1mTest name[22m - [1m[31mlocation: [1mFrankfurt (AWS)[22m[1m[39m[22m
  ⎋ Total duration: 123 ms - View test run details: [2m[36mhttps://app.datadoghq.com/synthetics/details/aaa-aaa-aaa?resultId=3&from_ci=true[39m[22m 
  [1m[31m✖[39m[22m [1m[31m[1mGET[22m[1m - http://fake.url[39m[22m
[1m[31m  - Assertion failed:[39m[22m
[1m[31m    ▶ responseTime should be less than [4m1000[24m. Actual: [4m1234[24m[39m[22m

"
`;

exports[`Default reporter resultEnd 3 Browser test: failed blocking, timed out, global failure 1`] = `
"[1m[31m✖[39m[22m [[1m[31mblocking[39m[22m] [[1m[2mabc-def-ghi[22m[22m] [1mTest name[22m - [1m[31mlocation: [1mLocation name[22m[1m[39m[22m - [1m[31mdevice: [1mchrome.laptop_large[22m[1m[39m[22m
  ⎋ Total duration: 20000 ms - View test run details: [2m[36mhttps://app.datadoghq.com/synthetics/details/abc-def-ghi/result/1?from_ci=true[39m[22m 
    [1m[32m✓[39m[22m | [1m1000[22mms - Navigate to start URL
    [2mhttps://example.org/[22m
    [1m[31m✖[39m[22m | [1m1000[22mms - Navigate
    [2mhttps://example.org/[22m
    [31m[2mNavigation failure[22m[39m
    [1m[31m✖[39m[22m | [1m1000[22mms - Assert
    [2mvalue[22m
    [31m[2mStep failure[22m[39m
    [1m[33m⇢[39m[22m | 3 skipped steps

[1m[31m✖[39m[22m [[1m[31mblocking[39m[22m] [[1m[2mabc-def-ghi[22m[22m] [1mTest name[22m - [1m[31mlocation: [1mLocation name[22m[1m[39m[22m
  ⎋ View test run details: [2m[36mhttps://app.datadoghq.com/synthetics/details/abc-def-ghi/result/1?from_ci=true[39m[22m (not yet received)
[31m    [[1mTIMEOUT[22m] - [2mResult timed out[22m[39m

[1m[31m✖[39m[22m [[1m[31mblocking[39m[22m] [[1m[2mabc-def-ghi[22m[22m] [1mTest name[22m - [1m[31mlocation: [1mLocation name[22m[1m[39m[22m
  ⎋ View test run details: [2m[36mhttps://app.datadoghq.com/synthetics/details/abc-def-ghi/result/1?from_ci=true[39m[22m 
[31m    [[1mFAILURE_CODE[22m] - [2mFailure message[22m[39m

"
`;

exports[`Default reporter runEnd Case where some outcomes are empty or missing 1`] = `
"[33m[1m1[22m test not found[39m [90m(bbb-bbb-bbb)[39m
View full summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa[39m[22m

[1mContinuous Testing Summary:[22m
Test Results: [32m[1m3[22m passed[39m, [31m[1m0[22m failed[39m, [33m[1m1[22m failed (non-blocking)[39m ([31m[1m1[22m critical errors[39m)
Total Duration: 9m 28s"
`;

exports[`Default reporter runEnd Complex case with all the tests and results outcomes possible 1`] = `
"[33m[1m2[22m tests not found[39m [90m(ccc-ccc-ccc, ddd-ddd-ddd)[39m
View full summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=batch-id[39m[22m

[1mContinuous Testing Summary:[22m
Test Results: [32m[1m2[22m passed[39m, [31m[1m1[22m failed[39m, [33m[1m3[22m failed (non-blocking)[39m, [1m1[22m skipped ([33m[1m1[22m timed out[39m, [31m[1m2[22m critical errors[39m)
Total Duration: 9m 28s"
`;

exports[`Default reporter runEnd Simple case with 1 test with 1 result (passed) 1`] = `
"View full summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa[39m[22m

[1mContinuous Testing Summary:[22m
Test Results: [32m[1m1[22m passed[39m, [31m[1m0[22m failed[39m
Total Duration: 9m 28s"
`;

exports[`Default reporter runEnd communicates 2 tests parallelization 1`] = `
"View full summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa[39m[22m

[1mContinuous Testing Summary:[22m
Test Results: [32m[1m1[22m passed[39m, [31m[1m0[22m failed[39m
Max parallelization configured: 2 tests running at the same time
Total Duration: 9m 28s

Increase your parallelization to reduce your total duration: [2m[36mhttps://app.datadoghq.com/synthetics/settings/continuous-testing[39m[22m
"
`;

exports[`Default reporter runEnd communicates no parallelization (1 test at a time) 1`] = `
"View full summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa[39m[22m

[1mContinuous Testing Summary:[22m
Test Results: [32m[1m1[22m passed[39m, [31m[1m0[22m failed[39m
Max parallelization configured: 1 test running at the same time
Total Duration: 9m 28s

Increase your parallelization to reduce your total duration: [2m[36mhttps://app.datadoghq.com/synthetics/settings/continuous-testing[39m[22m
"
`;

exports[`Default reporter runEnd does not communicate for uncapped orgs 1`] = `
"View full summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa[39m[22m

[1mContinuous Testing Summary:[22m
Test Results: [32m[1m1[22m passed[39m, [31m[1m0[22m failed[39m
Total Duration: 9m 28s"
`;

exports[`Default reporter testTrigger Blocking test, with 1 config override 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Found test "[32m[1mRequest on example.org[22m[39m" [90m(1 config override)[39m
"
`;

exports[`Default reporter testTrigger Blocking test, with 2 config overrides 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Found test "[32m[1mRequest on example.org[22m[39m" [90m(2 config overrides)[39m
"
`;

exports[`Default reporter testTrigger Blocking test, without config overwrite 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Found test "[32m[1mRequest on example.org[22m[39m"
"
`;

exports[`Default reporter testTrigger Non-blocking test from Datadog, with 1 config override 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Found test "[32m[1mRequest on example.org[22m[39m" (non-blocking) [90m(1 config override)[39m
"
`;

exports[`Default reporter testTrigger Non-blocking test from Datadog, with 2 config overrides 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Found test "[32m[1mRequest on example.org[22m[39m" (non-blocking) [90m(2 config overrides)[39m
"
`;

exports[`Default reporter testTrigger Non-blocking test from Datadog, without config overwrite 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Found test "[32m[1mRequest on example.org[22m[39m" (non-blocking)
"
`;

exports[`Default reporter testTrigger Non-blocking test, with 1 config override 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Found test "[32m[1mRequest on example.org[22m[39m" (non-blocking) [90m(1 config override)[39m
"
`;

exports[`Default reporter testTrigger Non-blocking test, with 2 config overrides 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Found test "[32m[1mRequest on example.org[22m[39m" (non-blocking) [90m(2 config overrides)[39m
"
`;

exports[`Default reporter testTrigger Skipped test from Datadog, with 1 config override 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Skipped test "[33m[2mRequest on example.org[22m[39m" because of execution rule configuration in Datadog
"
`;

exports[`Default reporter testTrigger Skipped test from Datadog, with 2 config overrides 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Skipped test "[33m[2mRequest on example.org[22m[39m" because of execution rule configuration in Datadog
"
`;

exports[`Default reporter testTrigger Skipped test from Datadog, without config overwrite 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Skipped test "[33m[2mRequest on example.org[22m[39m" because of execution rule configuration in Datadog
"
`;

exports[`Default reporter testTrigger Skipped test, with 1 config override 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Skipped test "[33m[2mRequest on example.org[22m[39m"
"
`;

exports[`Default reporter testTrigger Skipped test, with 2 config overrides 1`] = `
"[[1m[2maaa-bbb-ccc[22m[22m] Skipped test "[33m[2mRequest on example.org[22m[39m"
"
`;

exports[`Default reporter testsWait outputs triggered tests 1`] = `
"View pending summary in Datadog: [2m[36mhttps://app.datadoghq.com/synthetics/explorer/ci?batchResultId=123[39m[22m


- Waiting for [1m[36m11[39m[22m test results [90m(abc-def-ghi, abc-def-ghi, abc-def-ghi, abc-def-ghi, abc-def-ghi, abc-def-ghi, abc-def-ghi, abc-def-ghi, abc-def-ghi, abc-def-ghi, …)[39m…

"
`;
